--- a/core_bench.opam
+++ b/core_bench.opam
@@ -6,30 +6,18 @@ bug-reports: "https://github.com/janestreet/core_bench/issues"
 dev-repo: "https://github.com/janestreet/core_bench.git"
 license: "Apache-2.0"
 build: [
-  ["./configure" "--prefix" prefix]
-  [make]
+  ["jbuilder" "build-package" "core_bench" "-j" jobs]
 ]
 depends: [
-  "ocamlbuild"      {build}
-  "oasis"           {build & >= "0.4"}
-  "ocamlfind"       {build & >= "1.3.2"}
-  "bin_prot"
   "core"
   "core_extended"
-  "fieldslib"
-  "js-build-tools"  {build}
-  "ppx_assert"
-  "ppx_bench"
+  "jbuilder"
   "ppx_driver"
-  "ppx_expect"
-  "ppx_hash"
-  "ppx_inline_test"
   "ppx_jane"
-  "re"
-  "sexplib"
   "textutils"
-  "typerep"
-  "variantslib"
+  "re"
 ]
 available: [ ocaml-version >= "4.03.0" ]
-conflicts: [ "oasis" {= "0.4.7"} ]
+descr: "
+Benchmarking library
+"
