--- a/core_bench.opam
+++ b/core_bench.opam
@@ -11,11 +11,12 @@ build: [
 depends: [
   "core"
   "core_extended"
-  "jbuilder"
+  "jbuilder"                {build}
   "ppx_driver"
   "ppx_jane"
   "textutils"
-  "re"            {>= "1.5.0"}
+  "ocaml-migrate-parsetree"
+  "re"                      {>= "1.5.0"}
 ]
 available: [ ocaml-version >= "4.03.0" ]
 descr: "
