--- a/core_bench.opam
+++ b/core_bench.opam
@@ -11,11 +11,11 @@ build: [
 depends: [
   "core"
   "core_extended"
-  "jbuilder"                {build}
+  "jbuilder"                {build & >= "1.0+beta2"}
   "ppx_driver"
   "ppx_jane"
   "textutils"
-  "ocaml-migrate-parsetree"
+  "ocaml-migrate-parsetree" {>= "0.4"}
   "re"                      {>= "1.5.0"}
 ]
 available: [ ocaml-version >= "4.03.0" ]
