--- a/core_bench.opam
+++ b/core_bench.opam
@@ -3,7 +3,7 @@ maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/core_bench"
 bug-reports: "https://github.com/janestreet/core_bench/issues"
-dev-repo: "https://github.com/janestreet/core_bench.git"
+dev-repo: "git+https://github.com/janestreet/core_bench.git"
 license: "Apache-2.0"
 build: [
   ["jbuilder" "build" "--only-packages" "core_bench" "--root" "." "-j" jobs "@install"]
