--- a/core_bench.opam
+++ b/core_bench.opam
@@ -6,7 +6,7 @@ bug-reports: "https://github.com/janestreet/core_bench/issues"
 dev-repo: "git+https://github.com/janestreet/core_bench.git"
 license: "Apache-2.0"
 build: [
-  ["jbuilder" "build" "--only-packages" "core_bench" "--root" "." "-j" jobs "@install"]
+  ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
   "core"
