--- a/core_bench.opam
+++ b/core_bench.opam
@@ -11,11 +11,11 @@ build: [
 depends: [
   "core"
   "core_extended"
-  "ppx_driver"
   "ppx_jane"
   "textutils"
-  "jbuilder"                {build & >= "1.0+beta12"}
+  "jbuilder"                {build & >= "1.0+beta18.1"}
   "ocaml-migrate-parsetree" {>= "1.0"}
+  "ppxlib"                  {>= "0.1.1"}
   "re"                      {>= "1.5.0"}
 ]
 available: [ ocaml-version >= "4.04.1" ]
