--- a/core_bench.opam
+++ b/core_bench.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/core_bench"
 bug-reports: "https://github.com/janestreet/core_bench/issues"
 dev-repo: "git+https://github.com/janestreet/core_bench.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
