--- a/core_bench.opam
+++ b/core_bench.opam
@@ -1,23 +1,22 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/core_bench"
 bug-reports: "https://github.com/janestreet/core_bench/issues"
 dev-repo: "git+https://github.com/janestreet/core_bench.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_bench/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.07.0"}
   "core"
   "ppx_jane"
   "textutils"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
-  "re"                      {>= "1.5.0"}
+  "dune"      {build & >= "1.5.1"}
+  "re"        {>= "1.8.0"}
 ]
-available: [ ocaml-version >= "4.06.1" ]
-descr: "
-Benchmarking library
+synopsis: "Benchmarking library"
+description: "
 "
