--- a/src/dune
+++ b/src/dune
@@ -1,2 +1,3 @@
 (library (name core_bench) (public_name core_bench)
- (libraries textutils.ascii_table core) (preprocess (pps ppx_jane)))
+ (libraries textutils.ascii_table core core.time_stamp_counter)
+ (preprocess (pps ppx_jane)))
