--- a/core_bench.opam
+++ b/core_bench.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.13.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/core_bench"
@@ -10,11 +11,11 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.08.0"}
-  "core"
-  "core_kernel"
-  "ppx_jane"
-  "textutils"
+  "ocaml"       {>= "4.08.0"}
+  "core"        {>= "v0.13" & < "v0.14"}
+  "core_kernel" {>= "v0.13" & < "v0.14"}
+  "ppx_jane"    {>= "v0.13" & < "v0.14"}
+  "textutils"   {>= "v0.13" & < "v0.14"}
   "dune"        {>= "1.5.1"}
   "re"          {>= "1.8.0"}
 ]
