--- a/inline_benchmarks_runner_lib_public/src/dune
+++ b/inline_benchmarks_runner_lib_public/src/dune
@@ -1,3 +1,4 @@
 (library (name inline_benchmarks_public)
- (public_name core_bench.inline_benchmarks) (libraries core core_bench re)
+ (public_name core_bench.inline_benchmarks)
+ (libraries core.command_unix core core_bench re)
  (preprocess (pps ppx_jane)))
