--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (executables (names test_bench mv_regr)
- (libraries core core_bench core.time_stamp_counter)
+ (libraries core.command_unix core core_bench core.time_stamp_counter)
  (preprocess no_preprocessing))
