--- a/inline_benchmarks_runner_lib_public/src/dune
+++ b/inline_benchmarks_runner_lib_public/src/dune
@@ -1,4 +1,5 @@
 (library (name inline_benchmarks_public)
  (public_name core_bench.inline_benchmarks)
- (libraries core.command_unix core core_bench re)
+ (libraries core.command_unix core_kernel.core core_bench re
+  core_kernel.version_util)
  (preprocess (pps ppx_jane)))
