--- a/inline_benchmarks_runner_lib_public/src/dune
+++ b/inline_benchmarks_runner_lib_public/src/dune
@@ -2,4 +2,4 @@
  (public_name core_bench.inline_benchmarks)
  (libraries core.command_unix core_kernel.core core_bench re
   core_kernel.version_util)
- (preprocess (pps ppx_jane)))
+ (preprocess (pps ppx_let)))
