--- a/core_bench.opam
+++ b/core_bench.opam
@@ -13,10 +13,13 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "core"
   "core_kernel"
-  "ppx_jane"
+  "ppx_compare"
+  "ppx_fields_conv"
+  "ppx_let"
+  "ppx_sexp_conv"
   "textutils"
-  "dune"        {>= "2.0.0"}
-  "re"          {>= "1.8.0"}
+  "dune"            {>= "2.0.0"}
+  "re"              {>= "1.8.0"}
 ]
 synopsis: "Benchmarking library"
 description: "
