--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,4 @@
 (executables (names test_bench mv_regr)
- (libraries core.command_unix core_kernel.core core_bench
-  core.time_stamp_counter)
+ (libraries core_unix.command_unix core core_bench
+  core_unix.time_stamp_counter)
  (preprocess no_preprocessing))
