--- a/core_bench.opam
+++ b/core_bench.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.15.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/core_bench"
@@ -10,16 +11,16 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.08.0"}
-  "core"
-  "core_kernel"
-  "core_unix"
-  "ppx_compare"
-  "ppx_fields_conv"
-  "ppx_jane"
-  "ppx_let"
-  "ppx_sexp_conv"
-  "textutils"
+  "ocaml"           {>= "4.08.0"}
+  "core"            {>= "v0.15" & < "v0.16"}
+  "core_kernel"     {>= "v0.15" & < "v0.16"}
+  "core_unix"       {>= "v0.15" & < "v0.16"}
+  "ppx_compare"     {>= "v0.15" & < "v0.16"}
+  "ppx_fields_conv" {>= "v0.15" & < "v0.16"}
+  "ppx_jane"        {>= "v0.15" & < "v0.16"}
+  "ppx_let"         {>= "v0.15" & < "v0.16"}
+  "ppx_sexp_conv"   {>= "v0.15" & < "v0.16"}
+  "textutils"       {>= "v0.15" & < "v0.16"}
   "dune"            {>= "2.0.0"}
   "re"              {>= "1.8.0"}
 ]
