--- a/core_bench.opam
+++ b/core_bench.opam
@@ -23,6 +23,7 @@ depends: [
   "dune"            {>= "2.0.0"}
   "re"              {>= "1.8.0"}
 ]
+available: arch != "arm32" & arch != "x86_32"
 synopsis: "Benchmarking library"
 description: "
 "
