--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,6 @@
-(executables (names test_bench mv_regr)
+(executables
+ (modes byte exe)
+ (names test_bench mv_regr)
  (libraries core_unix.command_unix core core_bench
-  core_unix.time_stamp_counter)
+   core_unix.time_stamp_counter)
  (preprocess no_preprocessing))
