--- a/js/src/dune
+++ b/js/src/dune
@@ -1,3 +1,6 @@
-(library (name core_bench_js) (public_name core_bench.js)
+(library
+ (name core_bench_js)
+ (public_name core_bench.js)
  (libraries textutils.ascii_table_kernel core_bench_internals core)
- (preprocess (pps ppx_jane)))
+ (preprocess
+  (pps ppx_jane)))
