--- a/src/dune
+++ b/src/dune
@@ -1,5 +1,8 @@
-(library (name core_bench) (public_name core_bench)
+(library
+ (name core_bench)
+ (public_name core_bench)
  (libraries textutils.ascii_table core core_bench_internals
-  core_unix.filename_unix core_unix.time_stamp_counter
-  core_unix.time_float_unix)
- (preprocess (pps ppx_compare ppx_fields_conv ppx_let ppx_sexp_conv)))
+   core_unix.filename_unix core_unix.time_stamp_counter
+   core_unix.time_float_unix)
+ (preprocess
+  (pps ppx_compare ppx_fields_conv ppx_let ppx_sexp_conv)))
