--- a/js/example/dune
+++ b/js/example/dune
@@ -1,6 +1,6 @@
 (executables
  (modes byte exe)
  (names main)
- (libraries js_of_ocaml core core_bench_js incremental)
+ (libraries js_of_ocaml core core_bench_js)
  (preprocess
   (pps ppx_jane ppx_bench)))
