--- a/core_bench.opam
+++ b/core_bench.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.17.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/core_bench"
@@ -10,19 +11,19 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "5.1.0"}
-  "core"
-  "core_extended"
-  "core_kernel"
-  "core_unix"
-  "delimited_parsing"
-  "ppx_compare"
-  "ppx_fields_conv"
-  "ppx_jane"
-  "ppx_let"
-  "ppx_sexp_conv"
-  "textutils"
-  "time_now"
+  "ocaml"             {>= "5.1.0"}
+  "core"              {>= "v0.17" & < "v0.18"}
+  "core_extended"     {>= "v0.17" & < "v0.18"}
+  "core_kernel"       {>= "v0.17" & < "v0.18"}
+  "core_unix"         {>= "v0.17" & < "v0.18"}
+  "delimited_parsing" {>= "v0.17" & < "v0.18"}
+  "ppx_compare"       {>= "v0.17" & < "v0.18"}
+  "ppx_fields_conv"   {>= "v0.17" & < "v0.18"}
+  "ppx_jane"          {>= "v0.17" & < "v0.18"}
+  "ppx_let"           {>= "v0.17" & < "v0.18"}
+  "ppx_sexp_conv"     {>= "v0.17" & < "v0.18"}
+  "textutils"         {>= "v0.17" & < "v0.18"}
+  "time_now"          {>= "v0.17" & < "v0.18"}
   "dune"              {>= "3.11.0"}
   "re"                {>= "1.8.0"}
 ]
