--- a/inline_benchmarks_runner_lib_public/src/dune
+++ b/inline_benchmarks_runner_lib_public/src/dune
@@ -1,7 +1,7 @@
 (library
  (name inline_benchmarks_public)
  (public_name core_bench.inline_benchmarks)
- (libraries core_unix.command_unix core core_bench re
-   core_kernel.version_util)
+ (libraries core_unix.command_unix core core_bench core_bench_internals
+   ppx_bench.runtime-lib re core_kernel.version_util)
  (preprocess
   (pps ppx_let)))
