--- a/core_bench.opam
+++ b/core_bench.opam
@@ -11,6 +11,7 @@ build: [
 ]
 depends: [
   "ocaml" {>= "5.1.0"}
+  "command_nodejs"
   "core"
   "core_extended"
   "core_kernel"
@@ -24,7 +25,9 @@ depends: [
   "ppx_sexp_conv"
   "textutils"
   "time_now"
-  "dune"              {>= "3.11.0"}
+  "dune"              {>= "3.17.0"}
+  "js_of_ocaml"       {>= "6.0.0"}
+  "js_of_ocaml-ppx"   {>= "6.0.0"}
   "re"                {>= "1.8.0"}
 ]
 available: arch != "arm32" & arch != "x86_32"
