--- a/js/example/dune
+++ b/js/example/dune
@@ -1,6 +1,5 @@
-(executables
- (modes byte exe)
- (names main)
- (libraries js_of_ocaml core core_bench_js)
+(library
+ (name core_bench_js_example)
+ (libraries js_of_ocaml core)
  (preprocess
   (pps ppx_jane ppx_bench)))
