--- a/inline_benchmarks_runner_lib_public/src/native/dune
+++ b/inline_benchmarks_runner_lib_public/src/native/dune
@@ -3,6 +3,6 @@
  (public_name core_bench.inline_benchmarks)
  (libraries core_unix.command_unix core core_bench core_bench_internals
    inline_benchmarks_kernel_private core_unix.filename_unix
-   ppx_bench.runtime-lib re core_kernel.version_util)
+   ppx_bench.runtime-lib)
  (preprocess
   (pps ppx_let)))
