--- a/inline_benchmarks_runner_lib_public/src/kernel_private/dune
+++ b/inline_benchmarks_runner_lib_public/src/kernel_private/dune
@@ -1,7 +1,7 @@
 (library
  (name inline_benchmarks_kernel_private)
  (public_name core_bench.inline_benchmarks_kernel_private)
- (libraries core core_bench_internals ppx_bench.runtime-lib re
-   core_kernel.version_util)
+ (libraries ppx_bench.config_types core core_bench_internals
+   ppx_bench.runtime-lib re core_kernel.version_util_compat)
  (preprocess
   (pps ppx_let)))
